cabal-version:       >=1.10
name:                cis552-state
version:             0.1.0.0
synopsis:            State Monad
homepage:            https://www.cis.upenn.edu/~cis552/current/index.html
license:             OtherLicense
license-file:        LICENSE
maintainer:          sweirich@cis.upenn.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     State
                     , StateMonad
                     , RandomGen
  build-depends:       base >=4.13 && <4.14
                     , HUnit >= 1.6
                     , QuickCheck == 2.13.2
                     , containers == 0.6.2.1
                     , random == 1.1
                     , mtl == 2.2.2
  default-language:    Haskell2010  
  ghc-options:         -Wincomplete-patterns -Wno-missing-signatures
